# gamedig-bot

./: .gitignore  Cargo.toml  Dockerfile  Readme.md
.cargo/: config
.github/: FUNDING.yml
.github/workflows/: main.yml  rust-clippy.yml
src/: main.rs
