[package]
name = "discord_bot"
version = "0.1.0"
authors = ["Zefanja Jobse <zefanjaj@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.24", features = ["rt", "rt-multi-thread"] }
anyhow = "1.0"
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
warp = "0.3"
flexi_logger = "0.25"
log = "0.4"
confy = "0.5"


[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json"]